--- a/src/Pages/SignUp/SignUp.scss
+++ b/src/Pages/SignUp/SignUp.scss
@@ -1,1 +1,145 @@
-.
+@import "../../Styles/common.scss";
+
+.container {
+  height: 100%;
+  padding-top: 160px;
+  margin: 0 0 100px;
+  .join {
+    width: 1100px;
+    margin: 0px auto;
+    .joinStep {
+      padding: 40px 0 100px;
+      .stepTitle {
+        display: flex;
+        justify-content: center;
+
+        h2 {
+          font-size: 42px;
+          font-weight: 700;
+        }
+      }
+      .stepStage {
+        padding: 47px 0 0;
+        display: flex;
+        justify-content: center;
+        span {
+          font-size: 16px;
+          font-weight: 700;
+          color: $elseGrey;
+          margin: 0px 12px;
+        }
+        .stepTwo {
+          color: $lushBlack;
+        }
+      }
+    }
+    .tableTitle {
+      display: flex;
+      justify-content: space-between;
+      padding: 0 0 20px;
+      border-bottom: 1px solid $lushBlack;
+      h3 {
+        font-size: 28px;
+        font-weight: 600;
+      }
+      p {
+        margin-top: 12px;
+        font-size: 13px;
+        font-weight: 600;
+      }
+    }
+    .tableSignUp {
+      input {
+        border: 1px solid $elseGrey;
+        width: 100%;
+        padding: 10px;
+      }
+      .tableRow {
+        display: flex;
+        font-size: 14px;
+        .token {
+          margin-right: 6px;
+          font-size: 10px;
+        }
+      }
+      .textField {
+        margin: 20px 15px 0;
+        input {
+          width: 400px;
+        }
+      }
+      .textFieldEmail {
+        display: flex;
+        margin: 20px 15px 0;
+        input {
+          margin-right: 10px;
+          width: 270px;
+        }
+        .email {
+          width: 122px;
+        }
+        .checkBox {
+          margin: auto;
+          width: 30px;
+        }
+        .label {
+          font-size: 11px;
+          margin: auto;
+        }
+      }
+      .textFieldPhone {
+        display: flex;
+        margin: 20px 15px 0;
+        input {
+          width: 400px;
+        }
+        .checkBox {
+          margin: auto;
+          width: 30px;
+        }
+        .label {
+          font-size: 11px;
+          margin: auto;
+        }
+      }
+      .textFieldAddress {
+        display: flex;
+        margin: 20px 15px 0;
+        input {
+          margin-right: 10px;
+          width: 270px;
+        }
+        button {
+          padding: 0 18px;
+          background: transparent;
+          outline: none;
+          border: 1px solid $elseGrey;
+        }
+      }
+      .textFieldAddressMore {
+        display: flex;
+        margin: 20px 15px 0;
+        input {
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+  .dividerBottom {
+    margin: 40px auto;
+    width: 1100px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .btn {
+    margin: 20px 0 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    .btnSignUp {
+      padding: 20px 113px;
+      background-color: $lushBlack;
+      color: white;
+      font-weight: 1000;
+    }
+  }
+}
